@@ -1,3 +1,8 @@
+2008-06-07  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/formats/mdlformat.cpp: Add a check for EOF before reading,
+	as suggested by Izhar.
+
 2008-06-07  Chris Morley
 
 	* src/formats/fingerprintformat.cpp: correct folding error message
